Fix root post spacing between e.g. <p> tags
Wrap .dw-p-bdy contents in a .dw-p-bdy-blk, also when the inline threads
are placed in between the -blk:s. This makes it easier to specify
margins in CSS.

--- a/debiki-core/src/main/resources/toserve/css/debiki.css
+++ b/debiki-core/src/main/resources/toserve/css/debiki.css
@@ -106,11 +106,19 @@ table {
 
 /* --- Standard elems ---*/
 
-p {
-  margin: 0;
-}
-.dw-p-bdy-blk {
+/* Spacing between e.g. <p>:s. */
+.dw-p-bdy-blk > * {
   margin: 0 0 0.7em;
+}
+
+/* The root post. */
+.dw-depth-0 > .dw-p > .dw-p-bdy > div.dw-p-bdy-blk > * {
+  margin: 0 0 1em; /* or e.g. <p>:s not visible, because the root post
+                    has high line height */
+}
+
+.dw-p-bdy-blk {
+  margin: 0;
 }
 
 /* Show list item marks, but not for nested threads. */
